<resources>
    <string name="app_name">My Application</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name…</string>
    <string name="email">Email</string>
    <string name="email1">Email…</string>
    <string name="password">Password</string>
    <string name="password1">Password…</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_a_account_sign_in">Already Have a Account? Sign In</string>
    <string name="welcome">Welcome!</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="need_new_account_sign_up_here">Need new Account? Sign Up Here</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="profile">Profile</string>
    <string name="edit_profile_data">Edit Profile Data</string>
    <string name="update_profile_pic">Update Profile Pic</string>
    <string name="update_name">Update Name</string>
    <string name="change_password">Change Password</string>
    <string name="todo">TODO</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed">Feed</string>
    <string name="video">Video</string>
    <string name="message">Message</string>
    <string name="music">Music</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="ktgk">KTGK</string>
    <string name="textview">TextView</string>
    <string name="Textview1">TextView1</string>
    <string name="textview2">TextView2</string>
    <string name="textview3">TextView3</string>
</resources>